--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -656,6 +656,7 @@
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
+        "finalcutpro_browser_csv_label": "Browser: Save to CSV",
         "finalcutpro_browser_duration_label": "Browser: Duration",
         "finalcutpro_browser_frameiotomarkers_label": "Browser: Frame.io CSV to Markers",
         "finalcutpro_browser_height_label": "Browser: Clip Height",
@@ -762,6 +763,7 @@
         "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
         "finalcutpro_timeline_colorwheels_label": "Timeline: Color Wheel Actions",
         "finalcutpro_timeline_commandsetactions_label": "Command Set Actions",
+        "finalcutpro_timeline_csv_label": "Timeline: Save to CSV",
         "finalcutpro_timeline_effects_label": "Timeline: Effects",
         "finalcutpro_timeline_generators_label": "Timeline: Generators",
         "finalcutpro_timeline_height_label": "Timeline: Height",
@@ -1262,12 +1264,14 @@
         "save": "Save",
         "saveAllFormatAndAppearanceAttributes": "Save All Format and Appearance Attributes",
         "saveAppearanceAttributes": "Save Appearance Attributes",
+        "saveBrowserContentsToCSV": "Save Browser Contents to CSV",
         "saveBrowserLayoutForSelectedCollection_title": "Save Browser Layout for Selected Collection",
         "saveBrowserLayoutToMemory": "Save Browser Layout to Memory",
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
         "saveFormatAttributes": "Save Format Attributes",
+        "saveTimelineIndexToCSV": "Save Timeline Index to CSV",
         "scale": "Scale",
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
@@ -1297,6 +1301,7 @@
         "sections": "Sections",
         "segments": "Segments",
         "select": "Select",
+        "selectAFolderToSaveCSV": "Please select a folder to save the CSV to",
         "selectCompressorDestination": "Select a Destination Folder:",
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
         "selectDestinationFolder": "Please select a Destination Folder:",
