--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1237,9 +1237,12 @@
         "reportMotionBugToApple": "Report Motion Bug to Apple",
         "reset": "Reset",
         "resetAllControls": "Reset All Controls",
+        "resetApplication": "Reset Application",
+        "resetBank": "Reset Bank",
         "resetBrowserLayoutForSelectedCollection_title": "Reset Browser Layout for Selected Collection",
         "resetButton": "Reset Button",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
+        "resetEverything": "Reset Everything",
         "resetIncrementalNumber": "Reset Incremental Number",
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
@@ -1467,6 +1470,8 @@
         "touchbarPanelTooltip": "Touch Bar Preferences",
         "touchBarReset": "Reset All Touch Bar Items",
         "touchBarResetConfirmation": "This will reset all modified Touch Bar items to the default values.",
+        "touchBarResetGroupConfirmation": "This will reset all the Touch Bar items in the current application to the default values.",
+        "touchBarResetSubGroupConfirmation": "This will reset all the Touch Bar items in the current bank to the default values.",
         "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
         "transition": "Transition",
