--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -191,6 +191,7 @@
         "cmdIdMissingError": "A command ID is required to execute.",
         "cold": "Cold",
         "color": "Color",
+        "colorAndEffects": "Color & Effects",
         "colorBoard": "Color Board",
         "colorBoard2": "CB",
         "colorboard_group": "Colour Board",
@@ -501,10 +502,12 @@
         "customiseShortcuts": "Customise Shortcuts",
         "customPrefixError": "This prefix looks invalid. Please try again.",
         "customTouchBar": "Custom Touch Bar",
+        "customWorkspace": "Custom Workspace",
         "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
         "decreaseClipHeight": "Decrease Clip Height",
+        "default": "Default",
         "delete": "Delete",
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
         "deleteFileAfterImport": "Delete Generated File After Import",
@@ -536,6 +539,7 @@
         "draggableGuides": "Draggable Guides",
         "driveManagement": "Drive Management",
         "dropShadow": "Drop Shadow",
+        "dualDisplays": "Dual Displays",
         "dull": "Dull",
         "duration": "Duration",
         "ease": "Ease",
@@ -757,6 +761,7 @@
         "finalcutpro_tangent_video_label": "Tangent: Video Inspector",
         "finalcutpro_tangent_view_label": "Tangent: Final Cut Pro View Controls",
         "finalcutpro_tangent_viewer_label": "Tangent: Viewer",
+        "finalcutpro_tangent_workspaces_label": "Tangent: Workspaces",
         "finalcutpro_text2speech_label": "Text to Speech",
         "finalcutpro_timeline_audioeffects_label": "Timeline: Audio Effects",
         "finalcutpro_timeline_captions_label": "Timeline: Captions",
@@ -1109,6 +1114,7 @@
         "openTangentMapper": "Open Tangent Mapper",
         "openVoiceOverUtility": "Open Voice Over Utility",
         "options": "Options",
+        "organize": "Organize",
         "originalClipName": "Original Clip Name",
         "originalOptimised": "Original/Optimised",
         "out": "Out",
@@ -1558,6 +1564,7 @@
         "wholeWords": "Whole Words",
         "width": "Width",
         "windowManagement": "Window Management",
+        "workspaces": "Workspaces",
         "xml": "XML",
         "yellow": "Yellow",
         "yes": "Yes",
