--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -159,6 +159,7 @@
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
+        "changeFilenamesInCompressor": "Change Filenames in Compressor",
         "changeDestinationPreset": "Change Destination Preset",
         "changeFinalCutProLanguage": "Changing Final Cut Pro's language requires Final Cut Pro to restart.",
         "changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
@@ -890,6 +891,7 @@
         "humReduction9": "Hum -",
         "humRemoval": "Hum Removal",
         "icon": "Icon",
+        "ignore": "Ignore",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
         "ignoreInvalidCaptions": "Ignore Invalid Captions Warning",
@@ -1058,9 +1060,11 @@
         "mute": "Mute",
         "mute10": "Mute",
         "mute9": "Mute",
+        "needsToRestartToUpdateConsole": "CP needs to restart to update Console.",
         "needUserAndAppAPIKey": "You must supply both a User & Application API key to continue.",
         "new": "New",
         "newFCPXMLForFinalCutPro": "New Media for Final Cut Pro",
+        "newPluginDetected": "New Plugin Detected",
         "next": "Next",
         "nine": "9",
         "no": "No",
@@ -1254,6 +1258,7 @@
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
         "restart": "Restart",
+        "restartCommandPostNow": "Would you like to restart CP now?",
         "restore": "Restore",
         "restoreBrowserLayoutForSelectedCollection_title": "Restore Browser Layout for Selected Collection",
         "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
