Tweaked Advanced Final Cut Pro Preferences wording
- Tweaked the wording slightly on the Final Cut Pro Preferences page.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -27,7 +27,7 @@
         "addWatchFolder": "Add Watch Folder",
         "advanced": "Advanced",
         "advancedFeatures": "Advanced Features",
-        "advancedFeaturesWarning": "The below preferences use hidden Final Cut Pro preferences.<br />Please use at your own risk.",
+        "advancedFeaturesWarning": "The below options are hidden Final Cut Pro preferences.<br />If enabled, they'll remain enabled even if CommandPost is not running.<br />Trashing your Final Cut Pro preferences will reset these preferences too.<br />Please use with care, as there's a reason Apple hasn't exposed them.",
         "advancedPanelLabel": "Advanced",
         "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
@@ -159,8 +159,8 @@
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
-        "changeFilenamesInCompressor": "Change Filenames in Compressor",
         "changeDestinationPreset": "Change Destination Preset",
+        "changeFilenamesInCompressor": "Change Filenames in Compressor",
         "changeFinalCutProLanguage": "Changing Final Cut Pro's language requires Final Cut Pro to restart.",
         "changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
         "channel": "Channel",
@@ -866,6 +866,7 @@
         "height": "Height",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
+        "hiddenFinalCutProPreferences": "Hidden Final Cut Pro Preferences",
         "hideRejected": "Hide Rejected",
         "high": "High",
         "highlightedItem": "Highlighted Item",
