--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1024,7 +1024,8 @@
         "midiResetAll": "Reset All Applications",
         "midiResetAllConfirmation": "This will reset all MIDI items across all applications to the default values.",
         "midiResetGroup": "Reset Selected Application",
-        "midiResetGroupConfirmation": "This will reset all MIDI items with the current application to the default values.",
+        "midiResetGroupConfirmation": "This will reset all MIDI items in the current application to the default values.",
+        "midiResetSubGroupConfirmation": "This will reset all MIDI items in the current bank to the default values.",
         "midiTimecode": "MIDI Time Code (MTC)",
         "midiTimelineZoomDescription": "Allows you to control timeline zoom via MIDI controls.",
         "midiTools": "MIDI Tools",
