--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1045,6 +1045,7 @@
         "modes": "Modes",
         "modifier": "Modifier",
         "modifierKey": "Modifier Key",
+        "modifyProject": "Modify Project",
         "monitor": "Monitor",
         "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "mountExternalDrives_title": "Mount External Drives",
