--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -664,6 +664,7 @@
         "finalcutpro_browser_duration_label": "Browser: Duration",
         "finalcutpro_browser_frameiotomarkers_label": "Browser: Frame.io CSV to Markers",
         "finalcutpro_browser_height_label": "Browser: Clip Height",
+        "finalcutpro_browser_insertvertical_label": "Browser: Insert Clips Vertically",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_layouts_label": "Browser: Save & Restore Layouts",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -912,6 +913,7 @@
         "individualEffects": "Individual Effects",
         "inertiaCam": "InertiaCam",
         "info": "Info",
+        "insertClipsVerticallyFromBrowserToTimeline": "Insert Clips Vertically From Browser to Timeline",
         "insertIntoTimeline": "Insert into Timeline",
         "insideCorners": "Inside Corners",
         "inspector": "Inspector",
