--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -164,6 +164,7 @@
         "changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
         "channel": "Channel",
         "channelPressure": "Channel Pressure",
+        "checkerboard": "Checkerboard",
         "checkForUpdates": "Check for Updates",
         "circle": "Circle",
         "circle9": "Circle",
@@ -1346,6 +1347,7 @@
         "setIncrementalNumber": "Set Incremental Number",
         "setIncrementalNumberError": "This value looks incorrect. Please enter a number and try again.",
         "setIncrementalNumberMessage": "What would you like to set the Incremental Number to?",
+        "setPlayerBackgroundTo": "Set Player Background to",
         "settings": "Settings",
         "setupTitle": "CommandPost Setup",
         "setupWatchFolders": "Setup Watch Folders",
@@ -1500,6 +1502,7 @@
         "toggleControls": "Toggle Controls",
         "toggleEffects": "Toggle Effects",
         "toggleOverlaysWithCapsLock": "Toggle Overlays with Caps Lock",
+        "togglePlayerBackground": "Toggle Player Background",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
         "tools": "Tools",
@@ -1572,6 +1575,7 @@
         "viewAlphaColorChannel": "View Alpha Color Channel",
         "viewBlueColorChannel": "View Blue Color Channel",
         "viewer": "Viewer",
+        "viewer_group": "Viewer",
         "viewerOverlay": "Viewer Overlay",
         "viewGreenColorChannel": "View Green Color Channel",
         "viewOptions": "View Options",
