--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -602,6 +602,7 @@
         "family": "Family",
         "favorites": "Favorites",
         "favourite": "Favourite",
+        "favouriteFolderError": "There is no favourite folder currently saved for this action.\n\nPlease save a favourite folder for this action and try again.",
         "favourites": "Favourites",
         "fcpMediaFolder_Error_NoFiles": "No files were provided to import.",
         "fcpMediaFolder_Error_ProjectRequired": "There must be a Project or Compound Clip in the Timeline.",
@@ -1119,6 +1120,7 @@
         "openEmbeddedSpeechCommandsHelp": "Speech Commands Help",
         "openErrorLog": "Open Error Log",
         "openErrorLogOnDockClick": "Open Error Log on Dock Icon Click",
+        "openFavouriteFolder": "Open Favourite Folder",
         "openMessages": "Open Messages",
         "openPrivacyPolicy": "Open Privacy Policy",
         "openProjectAfterFind": "Open Project After Find",
@@ -1169,6 +1171,7 @@
         "playSelection": "Play Selection",
         "playToEnd": "Play to End",
         "pleaseEnterAPrefix": "Please enter a prefix",
+        "pleasePickAFolderToUseAsAFavourite": "Please pick a folder to use as a favourite",
         "pleaseSelectAnIcon": "Please select an icon:",
         "pleaseSelectATitle": "Please select a title in the timeline and try again.",
         "pleaseSelectSingleClipInTimeline": "Please select a single clip in the Timeline.",
@@ -1291,6 +1294,7 @@
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
+        "saveFavouriteFolder": "Save Favourite Folder",
         "saveFormatAttributes": "Save Format Attributes",
         "saveTimelineIndexToCSV": "Save Timeline Index to CSV",
         "scale": "Scale",
