--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1062,6 +1062,7 @@
         "music9": "Music",
         "musicEnhance": "Music Enhance",
         "musicEnhance9": "Music Enh",
+        "mustHaveSingleClipSelectedInTimeline": "You need to have a single clip selected in the timeline to use this feature.",
         "mustInstallTangentMapper": "You must install the Tangent Mapper & Hub to enable Tangent Panel support.",
         "mute": "Mute",
         "mute10": "Mute",
@@ -1336,6 +1337,8 @@
         "selectFolderToWatch": "Please select a folder to watch:",
         "selectLeftAudioEdge": "Select Left Audio Edge",
         "selectLeftEdge": "Select Left Edge",
+        "selectMiddleOfNextClipInSameStoryline": "Select Middle of Next Clip In Same Storyline",
+        "selectMiddleOfPreviousClipInSameStoryline": "Select Middle of Previous Clip In Same Storyline",
         "selectRightAudioEdge": "Select Right Audio Edge",
         "selectRightEdge": "Select Right Edge",
         "selectVoice": "Select Voice",
