--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1481,7 +1481,7 @@
         "tangentPanelLabel": "Tangent",
         "tangentPanelSupport": "Tangent Panel Support",
         "tangentPanelTooltip": "Tangent Preferences",
-        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong> & <strong>Wave2</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad</strong> & <strong>Android</strong> app, as well as any future panels that Tangent releases.",
+        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong> & <strong>Wave2</strong>, <strong>Ripple</strong>, <strong>Arc</strong>, <strong>CP-200</strong>, the <strong>Element-Vs iPad</strong> & <strong>Android</strong> app, as well as any future panels that Tangent releases.",
         "temperature": "Temperature",
         "temperature4": "Temp",
         "ten": "10",
