--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -94,6 +94,7 @@
         "backToFront9": "Bak2Front",
         "backupInterval": "Backup Interval",
         "backupMinimumDuration": "Backup Minimum Duration",
+        "badStreamDeckIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Stream Deck icons.",
         "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
         "bank": "Bank",
         "basic": "Basic",
@@ -278,6 +279,8 @@
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
+        "core_streamdeck_manager_label": "Manager: Stream Deck",
+        "core_streamdeck_prefs_label": "Preferences Panel: Stream Deck",
         "core_tangent_actions_label": "Tangent: ComandPost Actions Support",
         "core_tangent_commandpost_favourites_label": "Tangent: Favourites",
         "core_tangent_commandpost_functions_label": "Tangent: CommandPost Functions",
@@ -575,6 +578,7 @@
         "enableScrollingTimeline": "Enable Scrolling Timeline",
         "enableSharedPasteboard": "Enable Shared Pasteboard",
         "enableShortcutsDuringFullscreen": "Enable Shortcuts During Fullscreen Playback",
+        "enableStreamDeck": "Enable Stream Deck",
         "enableTangentPanelSupport": "Enable Tangent Panel Support",
         "enableVirtualTouchBar": "Enable Virtual Touch Bar",
         "enableWaveformDrawing": "Enable Waveform Drawing",
@@ -738,6 +742,7 @@
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
+        "finalcutpro_streamdeck_label": "Stream Deck",
         "finalcutpro_tangent_audio_label": "Tangent: Audio Inspector",
         "finalcutpro_tangent_browser_label": "Tangent: Browser Controls",
         "finalcutpro_tangent_clip_label": "Tangent: Final Cut Pro Clip Controls",
@@ -1462,6 +1467,16 @@
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "stop": "Stop",
+        "streamDeck": "Stream Deck",
+        "streamDeckAppRunning": "Stream Deck App is running.",
+        "streamDeckAppRunningMessage": "This must be closed to activate Stream Deck support in CommandPost.",
+        "streamDeckAppTip": "The official Stream Deck application is not compatible with CommandPost and can't be used at the same time.",
+        "streamdeckPanelLabel": "Stream Deck",
+        "streamdeckPanelTooltip": "Stream Deck Preferences",
+        "streamDeckReset": "Reset All Stream Deck Items",
+        "streamDeckResetConfirmation": "This will reset all modified Stream Deck items to the default values.",
+        "streamDeckResetGroupConfirmation": "This will reset all the Stream Deck items in the current application to the default values.",
+        "streamDeckResetSubGroupConfirmation": "This will reset all the Stream Deck items in the current bank to the default values.",
         "subcomponents": "Subcomponents",
         "subtract": "Subtract",
         "subtract9": "Subtract",
