--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -245,6 +245,7 @@
         "core_commands_global_label": "Global Commands",
         "core_console_label": "Console",
         "core_disk_automount_label": "Disk Automount",
+        "core_disk_favourites_label": "Disk Favourites",
         "core_helpandsupport_credits_label": "Help & Support: Credits",
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
         "core_helpandsupport_donate_label": "Help & Support: Donate",
@@ -275,10 +276,12 @@
         "core_preferences_panels_notifications_label": "Preferences: Notifications",
         "core_preferences_panels_plugins_label": "Preferences Panel: Plugins",
         "core_preferences_panels_scripting_label": "Preferences Panel: Scripting",
+        "core_preferences_panels_settings_label": "Preferences: Settings Panel",
         "core_preferences_panels_shortcuts_label": "Preferences Panel: Shortcuts",
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
+        "core_streamdeck_banks_label": "Stream Deck Banks",
         "core_streamdeck_manager_label": "Manager: Stream Deck",
         "core_streamdeck_prefs_label": "Preferences Panel: Stream Deck",
         "core_tangent_actions_label": "Tangent: ComandPost Actions Support",
@@ -773,6 +776,7 @@
         "finalcutpro_text2speech_label": "Text to Speech",
         "finalcutpro_timeline_audioeffects_label": "Timeline: Audio Effects",
         "finalcutpro_timeline_captions_label": "Timeline: Captions",
+        "finalcutpro_timeline_clipnavigation_label": "Timeline: Clip Navigation",
         "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
         "finalcutpro_timeline_colorwheels_label": "Timeline: Color Wheel Actions",
         "finalcutpro_timeline_commandsetactions_label": "Command Set Actions",
@@ -851,6 +855,7 @@
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_midibanks_action": "MIDI Banks",
+        "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
         "glow": "Glow",
