--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -170,6 +170,7 @@
         "circle": "Circle",
         "circle9": "Circle",
         "clear": "Clear",
+        "clearBrowserNotes_title": "Clear Notes on Selected Browser Clips",
         "clearHistory": "Clear History",
         "clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart",
         "clearingFinalCutProCacheRestartWarning": "The cache will be rebuilt when CommandPost starts, which may take several minutes. Do you want to continue?",
@@ -669,6 +670,7 @@
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
+        "finalcutpro_browser_clearnotes_label": "Browser: Clear Notes",
         "finalcutpro_browser_csv_label": "Browser: Save to CSV",
         "finalcutpro_browser_duration_label": "Browser: Duration",
         "finalcutpro_browser_frameiotomarkers_label": "Browser: Frame.io CSV to Markers",
