--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -279,10 +279,10 @@
         "core_preferences_panels_plugins_label": "Preferences Panel: Plugins",
         "core_preferences_panels_scripting_label": "Preferences Panel: Scripting",
         "core_preferences_panels_settings_label": "Preferences: Settings Panel",
-        "core_preferences_panels_shortcuts_label": "Preferences Panel: Shortcuts",
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
+        "core_shortcuts_prefs_label": "Preferences Panel: Shortcuts",
         "core_streamdeck_banks_label": "Stream Deck Banks",
         "core_streamdeck_manager_label": "Manager: Stream Deck",
         "core_streamdeck_prefs_label": "Preferences Panel: Stream Deck",
@@ -662,6 +662,7 @@
         "fillWith": "Fill With",
         "film": "Film",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
+        "filterShortcuts": "Filter Shortcuts",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
         "finalcutpro_advanced_backupinterval_label": "Advanced: Backup Interval",
@@ -727,6 +728,7 @@
         "finalcutpro_menu_tools_label": "Menubar: Tools",
         "finalcutpro_menu_tools_notifications_label": "Menubar: Notifications",
         "finalcutpro_menu_viewer_label": "Menubar: Viewer",
+        "finalcutpro_midi_controls_audio_label": "MIDI Controls: Audio",
         "finalcutpro_midi_controls_color_label": "MIDI Controls: Color Board",
         "finalcutpro_midi_controls_colorwheels_label": "MIDI Controls: Color Wheels",
         "finalcutpro_midi_controls_controlui_absolute_label": "MIDI Controls: Control FCP UI (Absolute)",
