--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -50,6 +50,7 @@
         "ambience9": "Ambience",
         "amount": "Amount",
         "amounts": "Amounts",
+        "anchor": "Anchor",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -1049,7 +1050,8 @@
         "midiTimelineZoomDescription": "Allows you to control timeline zoom via MIDI controls.",
         "midiTools": "MIDI Tools",
         "midiTopDeviceToAll": "This will apply the MIDI device on the top of the list to all the subsequent lines for the current application.",
-        "midiVideoInspector": "Controls the Final Cut Pro Video Inspector via a MIDI Knob or Slider",
+        "midiVideoInspector": "Controls the Video Inspector (supports 7bit & 14bit).",
+        "midiVolumeDescription": "Controls the Inspector Volume (supports 7bit & 14bit).",
         "midtones": "Midtones",
         "midtones2": "MT",
         "midtones4": "Mids",
@@ -1560,6 +1562,7 @@
         "touchBarResetSubGroupConfirmation": "This will reset all the Touch Bar items in the current bank to the default values.",
         "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
+        "transform": "Transform",
         "transition": "Transition",
         "transition_group": "Transition",
         "transmitMMC": "Transmit MMC",
