--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -59,7 +59,7 @@
         "apiKeysValidated": "Your API keys you entered have been successfully validated.",
         "appearance": "Appearance",
         "apple": "Apple",
-        "appleBugReporter": "Apple Bug Reporter",
+        "appleFeedbackAssistant": "Apple Feedback Assistant",
         "application": "Application",
         "applicationAPIKey": "Application API Key",
         "apply": "Apply",
