* Work in progress
- Color Curves, Color Puck, Hue/Saturation Curves and Inspector
Property TextFields now take into account regional numbers.
- Closes #1873
- Added Color Wheel actions.
- Remove legacy Pasteboard, Touch Bar and MIDI preferences migration.
- Loupedeck+ Preferences panel is now working.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -151,6 +151,7 @@
         "bugReport": "Bug Report",
         "button": "Button",
         "buttonLabel": "Button Label",
+        "buttonPress": "Button Press",
         "buttons": "Buttons",
         "cancel": "Cancel",
         "center": "Center",
@@ -576,6 +577,7 @@
         "enableFilenamePrefix": "Enable Filename Prefix",
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
+        "enableLoupdeckSupport": "Enable Loupedeck+ Support",
         "enableMIDI": "Enable MIDI Controls",
         "enablePasteboardHistory": "Enable Pasteboard History",
         "enableProwlNotifications": "Enable Prowl Notifications",
@@ -1010,6 +1012,10 @@
         "loopSearch": "Loop Search",
         "loudness": "Loudness",
         "loudness9": "Loudness",
+        "loupedeckPlus": "Loupedeck+",
+        "loupedeckResetAllConfirmation": "This will reset all Loupedeck+ items across all applications to the default values.",
+        "loupedeckResetGroupConfirmation": "This will reset all Loupedeck+ items in the current application to the default values.",
+        "loupedeckResetSubGroupConfirmation": "This will reset all Loupedeck+ items in the current bank to the default values.",
         "low": "Low",
         "macOS": "macOS",
         "magicButton": "Magic Button",
@@ -1036,6 +1042,7 @@
         "middle": "Middle",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
+        "loupedeckBankDescription": "Changes the Loupedeck+ Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
         "midiControlColorWheel": "Hold down SHIFT to change value at extended range.",
         "midiControls": "MIDI Controls",
@@ -1329,6 +1336,8 @@
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
         "sCurve": "S-Curve",
         "search": "Search",
+        "up": "Up",
+        "down": "Down",
         "searchAborted": "The search has been aborted.",
         "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so we've aborted it.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
         "searchEntireLibrary": "Search Entire Library",
@@ -1352,6 +1361,7 @@
         "selectDestinationPreset": "Please select a Destination Preset:",
         "selectedColumnNotShown": "The selected column could not be shown.",
         "selectedColumnNotShownDescription": "Please make sure the notes column is visible and try again.",
+        "selectedControl": "Selected Control",
         "selectFolderToWatch": "Please select a folder to watch:",
         "selectLeftAudioEdge": "Select Left Audio Edge",
         "selectLeftEdge": "Select Left Edge",
@@ -1574,6 +1584,8 @@
         "trebleReduce9": "Treble -",
         "trim": "Trim",
         "trimToPlayhead": "Trim To Playhead",
+        "turnLeftDown": "Turn Left/Down",
+        "turnRightUp": "Turn Right/Up",
         "two": "2",
         "type": "Type",
         "typeDateAndTime_title": "Type Date & Time",
